# pywarraychannels

./: README.md  channeltools_old.py  pyproject.toml  setup.cfg  setup.py  test.py
Demo/: test.py
Demos/: TestRays.txt  beampattern.py  channel_measurement.py  display_rays.py  mimo.py  reduced_codebooks.py
src/pywarraychannels/: __init__.py  antennas.py  channels.py  em.py  filters.py  uncertainties.py  utils.py
