[metadata]
name = pywarraychannels-Joanguitar
version = 0.0.5
author = Joan Palacios
author_email = jbeltra@ncsu.edu
description = Tools for wireless communications with wireless antenna arrays focused on geometric channels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Joanguitar/pywarraychannels
project_urls =
    Bug Tracker = https://github.com/Joanguitar/pywarraychannels/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
